# alive-next

./: CMakeLists.txt  IDEA.md  PLAN.md  README.md
tests/alive-tv-next/: README.md  e1.srctgt.ll  e1alt.srctgt.ll  e2.srctgt.ll  e3.srctgt.ll  e4.srctgt.ll  varA.srctgt.ll  varB.srctgt.ll
tools/: alive-tv-next.cpp  tv-next-range-test.cpp
tv-next/: CMakeLists.txt  README.md  back.cpp  back.h  compose.cpp  compose.h  cut.cpp  cut.h  diff.cpp  diff.h  ir_load.cpp  ir_load.h  main.cpp  proposer.cpp  proposer.h  range.cpp  range.h  unit.cpp  unit.h  verify.cpp  verify.h
